feat: add game resource
