# backend/src/resources/game/game.router.ts
@@ -1,0 +1,35 @@
+import { Router } from 'express';
+import gameController from './game.controller';
+import {
+    createGameSchema,
+    updateGameSchema,
+    gameIdSchema
+} from './game.schema';
+import { validate } from '../../middlewares/validate';
+
+const router = Router();
+
+router.get(
+    "/",
+    gameController.index
+);
+
+router.get(
+    "/:id",
+    validate(gameIdSchema),
+    gameController.listGameById
+);
+
+router.post(
+    "/",
+    validate(createGameSchema),
+    gameController.create
+);
+
+router.put(
+    "/:id",
+    validate(updateGameSchema),
+    gameController.update
+);
+
+export default router;
