# backend/src/resources/game/game.types.ts
@@ -1,0 +1,13 @@
+import { Game } from '@prisma/client';
+
+export type CreateGameDto = Pick<
+    Game,
+    | 'status'
+>;
+
+export type UpdateGameDto = Partial<
+    Pick<
+        Game,
+        | 'status'
+    >
+>;
